--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,13 +33,16 @@ h3 {
     font-size: 45px;
 }
 .navbar img {
-    width: 365px;
+    width: 350px;
     margin-right: 42px;
+    margin-left: 100px;
 }
 
 .navbar{
     display: flex;   
     font-size: 25px;
+    border-bottom: 1px solid #fff ;
+    text-transform: uppercase;
 }
 
 .navlink {
@@ -66,6 +69,7 @@ main {
 }
 
 #home h2 {
+    margin-top: 100px;
     margin-bottom: 52px;
 }
 
@@ -96,6 +100,7 @@ main {
 }
 
 .texto h2 {
+    margin-left: -35px;
     margin-right: 165px;
 }
 
@@ -253,15 +258,16 @@ main {
 #integrantes img{    
     margin-top: 150px;
     border-radius: 50%;
-    margin-left: 160px;
     margin-right: 165px;
     width: 400px;
 }
 .navbar a:hover {
     color: #FFE045;
-    transition: 1500ms;
-    font-size: 45px;
-    text-decoration:underline;
+    transition: 1000ms;
+}
+
+.foto-fernando {
+    margin-left: 165px;
 }
 
 #links a {
