--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,10 @@ h2 {
 
 a {
     text-decoration: none;
+    border-right: 2px solid #FA43DE;
+    margin-right: 2px;
+    text-align: center;
+    padding: 10px;
 }
 
 p {
@@ -41,7 +45,6 @@ h3 {
 .navbar{
     display: flex;   
     font-size: 25px;
-    border-bottom: 1px solid #fff ;
     text-transform: uppercase;
 }
 
@@ -51,14 +54,15 @@ h3 {
     margin-left: 82px;
 }
 .navbar a {
-    margin-left: 20px;
+    margin-left: 15px;
     margin-right: 15px;
     font-size: 35px;
     font-weight: 700;
     display: flex;
     justify-content: center;
-    align-items: center;
     margin-top: 157px;
+    text-align: center;
+    padding-inline: 10px;
     color: #3DD8FC; 
 }
 
@@ -66,6 +70,10 @@ main {
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+
+#home {
+    background-image: url(../img/Rectangle\ 1.png);
 }
 
 #home h2 {
