--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,30 +16,40 @@ html {
 h2 {
     font-size: 45px;
     font-weight: 700;
+    background: none;
     
 }
 
 a {
     text-decoration: none;
+    border-right: 2px solid #FA43DE;
+    margin-right: 2px;
+    text-align: center;
+    padding: 10px;
+    background: none;
 }
 
 p {
     font-size: 25px;
     font-weight: 500;
+    background: none;
 }
 
 h3 {
     color: #FFE045;
     font-size: 45px;
+    background: none;
 }
 .navbar img {
-    width: 365px;
+    width: 350px;
     margin-right: 42px;
+    margin-left: 100px;
 }
 
 .navbar{
     display: flex;   
     font-size: 25px;
+    text-transform: uppercase;
 }
 
 .navlink {
@@ -48,43 +58,51 @@ h3 {
     margin-left: 82px;
 }
 .navbar a {
-    margin-left: 20px;
+    margin-left: 15px;
     margin-right: 15px;
     font-size: 35px;
     font-weight: 700;
     display: flex;
     justify-content: center;
-    align-items: center;
     margin-top: 157px;
+    text-align: center;
+    padding-inline: 10px;
     color: #3DD8FC; 
 }
 
 main {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     text-align: center;
 }
 
+#home {
+    background: url(../img/Rectangle\ 1.png)no-repeat;
+    width: 1278px;
+    height: 551px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 300px;
+    border-radius: 23px;
+    
+}
+
 #home h2 {
-    margin-bottom: 52px;
+    text-align: right;
+    float: left;
+    margin-top: 246px;
+    margin-left: 80px;
+    color: #FFE045;
+    font-weight: bold;
 }
 
 #home p {
-    margin-inline: 110px 110px;
-    margin-bottom: 79px;
-}
-
-#home picture {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#home img {
-    border-radius: 48px;
-    width: 350px;
+    margin-left: 708px;
     margin-right: 40px;
-    margin-bottom: 68px;
+    margin-top: -246px;
+    justify-content: right;
+    text-align: left;
 }
 
 #publico{
@@ -93,16 +111,24 @@ main {
 
 #publico img {
     border-radius: 50%;
+    margin-top: 90px;
+    margin-left: 350px;
+    float: left;
 }
 
 .texto h2 {
+    margin-top: 80px;
+    margin-bottom: 80px;
+    margin-left: -35px;
     margin-right: 165px;
+    color: #FA43DE;
+    font-weight: bold;
 }
 
 .texto p {
-    margin-top: 50px;
     text-align: start;
-    margin-left: 29px;
+    margin-left: 200px;
+    margin-right: 305px;
 }
 
 #equipamentos h2 {
@@ -115,14 +141,15 @@ main {
 
 #equipamentos{
     width: 100%;
-    height: 31vh;
+    height: 35vh;
 }  
 
 .carossel-Container{
     position: relative;
     width: 100%;
-    height: auto;
+    height: 310px;
     overflow: hidden;
+    background: url(../img/Rectangle\ 2.png)no-repeat;
   }
   
   .carossel-Slide{
@@ -142,7 +169,7 @@ main {
     border-radius: 48px;
     height: 310px;
     width: 350px;  
-    transition: right 1s ease-out;
+    transition: right 10s ease-out;
     box-sizing: content-box;
   }
 
@@ -151,7 +178,7 @@ main {
   }
   
   .btnCarossel{
-    background: rgba(20,20,20,.5);
+    background: rgba(20, 20, 20, 0);
     width: 5%;
     height: 100%;
     position: absolute;
@@ -207,7 +234,7 @@ main {
 }
 
 #funcionamento h2{
-    margin-top: 600px;
+    margin-top: 200px;
     margin-bottom: 45px;
 }    
 
@@ -253,15 +280,16 @@ main {
 #integrantes img{    
     margin-top: 150px;
     border-radius: 50%;
-    margin-left: 160px;
     margin-right: 165px;
     width: 400px;
 }
 .navbar a:hover {
     color: #FFE045;
-    transition: 1500ms;
-    font-size: 45px;
-    text-decoration:underline;
+    transition: 1000ms;
+}
+
+.foto-fernando {
+    margin-left: 165px;
 }
 
 #links a {
@@ -275,5 +303,25 @@ main {
     text-decoration:underline;
 }
 
-
+#comentario {
+    position:relative; top:-80px;
+    left:170px;
+    padding:4px;
+    line-height:20px;
+    background:#333;
+    color:#fff;
+    display: block;
+    width:135px;
+    opacity: 0;
+   
+    -webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+    -ms-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+    transition: all 300ms ease;
+   }
+   
+   #foto:hover  #comentario{
+         opacity: 1;
+   }
   
