--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,9 +145,12 @@ h3 {
 .texto1 h2{
     color: #FFE045;
 }
+#equipamentos h2 {
+    margin-top: -100px;
+}
 #equipamentos{
     width: 850px;
-    height: 100vh;
+    height: 700px;
     background: url(../img/Rectangle\ 2.png) no-repeat;
     display: flex;
     margin-left: 35%;
@@ -164,19 +167,19 @@ h3 {
     display: flex;
     justify-content: center;
     align-content: center;
-    width: 700px;
-    height: 400px;
+    width: 350px;
+    height: 300px;
     position: relative;
-    margin-bottom: 10rem;
-    margin-top: 2rem;
+    margin-bottom: 5rem;
+    margin-top: -5rem;
 }
 #slider img{
     opacity: 0;
     margin-right: 10px;
     position: absolute;
     background: none;
-    width: 100%;
-    height: 100%;
+    width: 350px;
+    height: 300px;
     object-fit: cover;
     transition: opacity 800ms;
 }
@@ -471,6 +474,9 @@ h3 {
     .texto1 h2{
         color: #FFE045;
     }
+    #equipamentos h2 {
+        margin-top: -350px;
+    }
     #equipamentos{
         width: 1128px;
         height: 100vh;
@@ -482,19 +488,19 @@ h3 {
         text-align: center;
         align-items: center;
         border-radius: 10px;
-        margin-bottom: 50px;
-        margin-top: 80px;
+        margin-bottom: 20px;
+        margin-top: 70px;
 
     }  
     #slider {
         display: flex;
         justify-content: center;
         align-content: center;
-        width: 700px;
-        height: 2000px;
+        width: 300px;
+        height: 250px;
         position: relative;
         margin-bottom: 10rem;
-        margin-top: 2rem;
+        margin-top: -18rem;
         background: none;
 
     }
@@ -502,8 +508,8 @@ h3 {
         opacity: 0;
         border-radius: 10px;
         position: absolute;
-        width: 70%;
-        height: 100%;
+        width: 450px;
+        height: 350px;
         object-fit: cover;
         transition: opacity 800ms;
         
