--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     color: #fff;
     background-color: black;
 }
-
+/*
 main{
     max-width: 375px;
     display: flex;
@@ -145,12 +145,9 @@ h3 {
 .texto1 h2{
     color: #FFE045;
 }
-#equipamentos h2 {
-    margin-top: -100px;
-}
 #equipamentos{
     width: 850px;
-    height: 700px;
+    height: 100vh;
     background: url(../img/Rectangle\ 2.png) no-repeat;
     display: flex;
     margin-left: 35%;
@@ -167,19 +164,19 @@ h3 {
     display: flex;
     justify-content: center;
     align-content: center;
-    width: 350px;
-    height: 300px;
+    width: 700px;
+    height: 400px;
     position: relative;
-    margin-bottom: 5rem;
-    margin-top: -5rem;
+    margin-bottom: 10rem;
+    margin-top: 2rem;
 }
 #slider img{
     opacity: 0;
     margin-right: 10px;
     position: absolute;
     background: none;
-    width: 350px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     transition: opacity 800ms;
 }
@@ -333,13 +330,12 @@ h3 {
     padding: 5px;
     justify-content: right;
 }
-
+*/
 
 @media (min-width: 1000px){
 
     main{
         max-width: 1024px;
-
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -355,13 +351,8 @@ h3 {
     }
     body {
         min-height: 100vh;
-        max-width: 1440px;
-        width: 1024px;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
+        max-width: 350px;
+       
     
     }
     h2 {
@@ -392,7 +383,6 @@ h3 {
     }
     .navbar img {
         width: 300px;
-        margin-left: 540px;
     }
     .navbar{
         display: flex;  
@@ -447,7 +437,7 @@ h3 {
         justify-content: center;
         align-items: center;
         width: 1000px;
-        margin-left: 200px; 
+        margin-left: 50px; 
     
     } 
     #publico img {
@@ -481,9 +471,6 @@ h3 {
     .texto1 h2{
         color: #FFE045;
     }
-    #equipamentos h2 {
-        margin-top: -350px;
-    }
     #equipamentos{
         width: 1128px;
         height: 100vh;
@@ -495,19 +482,18 @@ h3 {
         text-align: center;
         align-items: center;
         border-radius: 10px;
-        margin-bottom: 20px;
-        margin-top: 70px;
+        margin-bottom: 50px;
+        margin-top: 80px;
 
     }  
     #slider {
         display: flex;
         justify-content: center;
         align-content: center;
-        width: 300px;
-        height: 250px;
+        width: 700px;
+        height: 700px;
         position: relative;
-        margin-bottom: 15rem;
-        margin-top: -18rem;
+        margin-bottom: 10rem;
         background: none;
 
     }
@@ -515,8 +501,7 @@ h3 {
         opacity: 0;
         border-radius: 10px;
         position: absolute;
-        width: 450px;
-        height: 350px;
+        width: 70%;
         object-fit: cover;
         transition: opacity 800ms;
         
@@ -528,16 +513,13 @@ h3 {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        text-align: center;
         justify-content: center;
         width: 1000px;
-        margin-left: 350px;
     }
     #funcionamento h2{
         margin-top: 120px;
         margin-bottom: 70px;
-        margin-right: 250px;
-        text-align: center;
+        margin-left: 400px;
         color: #FFE045;
     }    
     #funcionamento p{
@@ -589,7 +571,7 @@ h3 {
     }
     #integrantes {
         width: 1000px;
-        margin-left: 45%;
+        margin-left: 30%;
     }
     #integrantes picture{
         display: flex;
@@ -628,9 +610,9 @@ h3 {
         font-size: 24px;
     }
     #links {
+    
         width: 1000px;
-        margin-left: 50%;
-        margin-top: -500px;
+        margin-left: 45%;
     }
     .links a{
         border: none;
