--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     color: #fff;
     background-color: black;
 }
-/*
+
 main{
     max-width: 375px;
     display: flex;
@@ -145,9 +145,12 @@ h3 {
 .texto1 h2{
     color: #FFE045;
 }
+#equipamentos h2 {
+    margin-top: -100px;
+}
 #equipamentos{
     width: 850px;
-    height: 100vh;
+    height: 700px;
     background: url(../img/Rectangle\ 2.png) no-repeat;
     display: flex;
     margin-left: 35%;
@@ -164,19 +167,19 @@ h3 {
     display: flex;
     justify-content: center;
     align-content: center;
-    width: 700px;
-    height: 400px;
+    width: 350px;
+    height: 300px;
     position: relative;
-    margin-bottom: 10rem;
-    margin-top: 2rem;
+    margin-bottom: 5rem;
+    margin-top: -5rem;
 }
 #slider img{
     opacity: 0;
     margin-right: 10px;
     position: absolute;
     background: none;
-    width: 100%;
-    height: 100%;
+    width: 350px;
+    height: 300px;
     object-fit: cover;
     transition: opacity 800ms;
 }
@@ -330,12 +333,13 @@ h3 {
     padding: 5px;
     justify-content: right;
 }
-*/
+
 
 @media (min-width: 1000px){
 
     main{
         max-width: 1024px;
+
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -351,8 +355,13 @@ h3 {
     }
     body {
         min-height: 100vh;
-        max-width: 350px;
-       
+        max-width: 1440px;
+        width: 1024px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
     
     }
     h2 {
@@ -383,6 +392,7 @@ h3 {
     }
     .navbar img {
         width: 300px;
+        margin-left: 540px;
     }
     .navbar{
         display: flex;  
@@ -437,7 +447,7 @@ h3 {
         justify-content: center;
         align-items: center;
         width: 1000px;
-        margin-left: 50px; 
+        margin-left: 200px; 
     
     } 
     #publico img {
@@ -471,6 +481,9 @@ h3 {
     .texto1 h2{
         color: #FFE045;
     }
+    #equipamentos h2 {
+        margin-top: -350px;
+    }
     #equipamentos{
         width: 1128px;
         height: 100vh;
@@ -482,18 +495,19 @@ h3 {
         text-align: center;
         align-items: center;
         border-radius: 10px;
-        margin-bottom: 50px;
-        margin-top: 80px;
+        margin-bottom: 20px;
+        margin-top: 70px;
 
     }  
     #slider {
         display: flex;
         justify-content: center;
         align-content: center;
-        width: 500px;
-        height: 700px;
+        width: 300px;
+        height: 250px;
         position: relative;
-        margin-bottom: 10rem;
+        margin-bottom: 15rem;
+        margin-top: -18rem;
         background: none;
 
     }
@@ -501,7 +515,8 @@ h3 {
         opacity: 0;
         border-radius: 10px;
         position: absolute;
-        width: 70%;
+        width: 450px;
+        height: 350px;
         object-fit: cover;
         transition: opacity 800ms;
         
@@ -513,13 +528,16 @@ h3 {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
+        text-align: center;
         justify-content: center;
         width: 1000px;
+        margin-left: 350px;
     }
     #funcionamento h2{
         margin-top: 120px;
         margin-bottom: 70px;
-        margin-left: 400px;
+        margin-right: 250px;
+        text-align: center;
         color: #FFE045;
     }    
     #funcionamento p{
@@ -571,7 +589,7 @@ h3 {
     }
     #integrantes {
         width: 1000px;
-        margin-left: 30%;
+        margin-left: 45%;
     }
     #integrantes picture{
         display: flex;
@@ -610,9 +628,9 @@ h3 {
         font-size: 24px;
     }
     #links {
-    
         width: 1000px;
-        margin-left: 45%;
+        margin-left: 50%;
+        margin-top: -500px;
     }
     .links a{
         border: none;
